tests/type-errors/effect_method_asset_update_partition.arl
archetype effect_method_asset_update_partition

asset o_asset identified by oid {
  oid : int;
  v : int;
}

asset my_asset identified by id {
  id     : string;
  col    : o_asset partition;
} initialized by {
  {"id0"; []};
  {"id1"; []};
  {"id2"; []}
}

variable res : int = 0

entry exec () {
  effect {
    my_asset["id0"].col.update(0, {v = 2})
  }
}
